--- a/TravelBooking/theme/templates/base.html
+++ b/TravelBooking/theme/templates/base.html
@@ -1,4 +1,3 @@
-
 {% load static tailwind_tags %}
 
 <!DOCTYPE html>
@@ -39,21 +38,25 @@
 				<nav class="main_nav">
 					<ul class="flex justify-center items-center space-x-6 text-gray-800">
 						<li><a href="{% url 'index' %}" class="hover:text-blue-500">Home</a></li>
-						<li><a href="{% url 'base' %}" class="hover:text-blue-500">Adventure</a></li>
+						<li><a href="{% url 'product_list' %}" class="hover:text-blue-500">Adventure</a></li>
 						<li><a href="{% url 'base' %}" class="hover:text-blue-500">Compare</a></li>
 						<li><a href="{% url 'base' %}" class="hover:text-blue-500">Customize</a></li>
 						<li><a href="{% url 'base' %}" class="hover:text-blue-500">My Booking</a></li>
-
+				
 						{% if user.is_authenticated %}
-						<li>Hello, {{user.username}}</li>
-						<li><a href="{% url 'logout' %}" class="hover:text-blue-500">Logout</a></li>
-						
+							<li class="relative">
+								<a id="profilebtn" href="#" class="hover:text-blue-500">Profile</a>
+								<ul id="profileDropdown" class="absolute hidden bg-white shadow-md rounded mt-2">
+									<li><a href="{% url 'logout' %}" class="block px-4 py-2 text-gray-800 hover:bg-gray-200">Logout</a></li>
+									<li><a href="{% url 'base' %}" class="block px-4 py-2 text-gray-800 hover:bg-gray-200">Settings</a></li>
+								</ul>
+							</li>
 						{% else %}
-
-						<li><a href="{% url 'login' %}" class="hover:text-blue-500">Login</a></li>
+							<li><a href="{% url 'login' %}" class="hover:text-blue-500">Login</a></li>
 						{% endif %}
 					</ul>
 				</nav>
+				
 			</div>
 		</div>
 	</header>
@@ -70,6 +73,15 @@
     </div>
 	</footer>
 </div>
+<script>
+    // Toggle dropdown menu
+    document.getElementById('profilebtn').addEventListener('click', function() {
+        var dropdown = document.getElementById('profileDropdown');
+        dropdown.classList.toggle('hidden');
+    });
+
+
+</script>
 </body>
 
 </html>
