--- a/TravelBooking/theme/templates/index.html
+++ b/TravelBooking/theme/templates/index.html
@@ -56,7 +56,7 @@
                 <p class="text-gray-700 mb-2">Vendor: {{ product.vendor.title }}</p>
                 <p class="text-gray-700 mb-2">Old Price: ${{ product.old_price }}</p>
                 <p class="text-gray-700 mb-2">Price: ${{ product.price }}</p>
-                <a href="{% url 'product_detail' product.pid %}" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">Book Now</a>
+                <a href="{% url 'product_detail' product.pid %}" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">Read More</a>
             </div>
         {% endfor %}
     </div>
