--- a/TravelBooking/theme/templates/booking_details.html
+++ b/TravelBooking/theme/templates/booking_details.html
@@ -204,6 +204,9 @@
       >
         Submit Booking
       </button>
+      <a href="{% url 'product_detail' product.pid %}" class="bg-gray-300 hover:bg-gray-400 text-gray-800 font-bold py-2 px-4 rounded ml-2 focus:outline-none focus:shadow-outline">
+        Cancel
+    </a>
     </form>
   </div>
 </div>
