--- a/TravelBooking/theme/templates/index.html
+++ b/TravelBooking/theme/templates/index.html
@@ -1,13 +1,17 @@
 {% extends 'base.html' %}
 {% load static tailwind_tags %}
 {% block title %}
-    <title>Home</title>
+    Home
 {% endblock %}
 {% tailwind_css %}  
 
 
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;500;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" crossorigin="anonymous" />
+    <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/alertifyjs@1.13.1/build/css/alertify.min.css"/>
+    <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/alertifyjs@1.13.1/build/css/themes/default.min.css"/>
+
 
     
 
@@ -22,12 +26,11 @@
             <div class="container mx-auto mt-16 flex justify-center">
                 <div class="relative">
                     <form id="searchForm" class="flex" method="GET" action="{% url 'search_results' %}">
-                        <input id="searchInput" type="search" name="q" placeholder="What would you like to experience?" class="bg-white bg-opacity-75 h-12 px-6 pr-10 rounded-full text-sm w-96 focus:outline-none border border-gray-300 text-gray-800 placeholder-gray-800 shadow-md">
+                        <input id="searchInput" type="search" name="q" placeholder="What would you like to experience?" class="bg-white   bg-opacity-75 h-12 px-6 pr-10 rounded-full text-sm w-96 focus:outline-none border border-gray-300 text-gray-800 placeholder-gray-800 shadow-md">
                         <button id="searchButton" type="submit" class="absolute inset-y-0 right-0 flex items-center justify-center bg-blue-500 text-white rounded-full px-4 py-2 ml-2 hover:bg-blue-600 focus:outline-none">
-                            <svg class="h-5 w-5" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 15l4-4m0 0l-4-4m4 4H4m15 4v-7a3 3 0 00-3-3H6a3 3 0 00-3 3v7a3 3 0 003 3h10a3 3 0 003-3z"></path>
-                            </svg>
+                            <i class="fas fa-search"></i> <!-- Font Awesome search icon -->
                         </button>
+                        
                     </form>
                 </div>
             </div>
@@ -35,7 +38,7 @@
     </div>
 
     <!-- Destinations Section -->
-    <div class="py-6"></div>
+    <div class="py-6 "></div>
     <div class="destinations" id="destinations">
         <div class="container mx-auto px-4">
             <div class="grid grid-cols-1 md:grid-cols-3 gap-4">
@@ -47,18 +50,27 @@
         </div>
     </div>
     
-    <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 pl-20  gap-6  ">
+    <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 10  gap-6  ">
 
         {% for product in products %}
             <div class="bg-white p-6 rounded-lg shadow-md">
                 <img src="{{ product.image.url }}" alt="{{ product.title }}" class="w-full mb-4 rounded">
                 <h2 class="text-xl font-semibold mb-2">{{ product.title }}</h2>
                 <p class="text-gray-700 mb-2"><strong>Category:</strong> {{ product.category.title }}</p>
-                <p class="text-gray-700 mb-2"><strong>Vendor:</strong> {{ product.vendor.title }}</p>
+                <p class="text-gray-700 mb-2"><strong>Vendor:</strong> {{ product.user }}</p>
                 <p class="text-gray-700 mb-2"><Strong>Price:</Strong> Rs.{{ product.price }}</p>
                 <a href="{% url 'product_detail' product.pid %}" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">Read More</a>
             </div>
         {% endfor %}
     </div>
+
+    <script src="//cdn.jsdelivr.net/npm/alertifyjs@1.13.1/build/alertify.min.js"></script>
+    {% for flashmsg in messages %}
+    <script>
+        alertify.set('notifier', 'position', 'top-right');
+        alertify.success('{{ flashmsg }}');
+    </script>
+	{% endfor %}
+
                     
 {% endblock %}
