--- a/TravelBooking/theme/templates/product_detail.html
+++ b/TravelBooking/theme/templates/product_detail.html
@@ -3,13 +3,13 @@
 {% endblock %} {% tailwind_css %}
 <link
   rel="stylesheet"
-  href="//cdn.jsdelivr.net/npm/alertifyjs@1.13.1/build/css/alertify.min.css"
-/>
+  href="//cdn.jsdelivr.net/npm/alertifyjs@1.13.1/build/css/alertify.min.css"/>
 <!-- Default theme -->
 <link
   rel="stylesheet"
-  href="//cdn.jsdelivr.net/npm/alertifyjs@1.13.1/build/css/themes/default.min.css"
-/>
+  href="//cdn.jsdelivr.net/npm/alertifyjs@1.13.1/build/css/themes/default.min.css"/>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" crossorigin="anonymous" />
+
 {% block content %}
 <body class="bg-gray-100">
   <div class="container mx-auto py-8">
@@ -38,7 +38,7 @@
           <p class="text-gray-700 mb-2">
             Category: {{ product.category.title }}
           </p>
-          <p class="text-gray-700 mb-2">Vendor: {{ product.vendor.title }}</p>
+          <p class="text-gray-700 mb-2">Vendor: {{ product.user }}</p>
           <!-- Additional product details can be added here -->
         </div>
         <!-- Check Availability section -->
