--- a/TravelBooking/theme/templates/search_results.html
+++ b/TravelBooking/theme/templates/search_results.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load static tailwind_tags %}
 {% block title %}
-    <title>Search Results</title>
+    Search Results
 {% endblock %}
 {% tailwind_css %}  
 
@@ -42,8 +42,7 @@
                     <img src="{{ product.image.url }}" alt="{{ product.title }}" class="w-full mb-4 rounded">
                     <h2 class="text-xl font-semibold mb-2">{{ product.title }}</h2>
                     <p class="text-gray-700 mb-2">Category: {{ product.category.title }}</p>
-                    <p class="text-gray-700 mb-2">Vendor: {{ product.vendor.title }}</p>
-                    <p class="text-gray-700 mb-2">Old Price: ${{ product.old_price }}</p>
+                    <p class="text-gray-700 mb-2">Vendor: {{ product.user }}</p>
                     <p class="text-gray-700 mb-2">Price: ${{ product.price }}</p>
                     <a href="{% url 'product_detail' product.pid %}" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">Read More</a>
                 </div>
