--- a/TravelBooking/theme/templates/index.html
+++ b/TravelBooking/theme/templates/index.html
@@ -54,7 +54,8 @@
 
         {% for product in products %}
             <div class="bg-white p-6 rounded-lg shadow-md">
-                <img src="{{ product.image.url }}" alt="{{ product.title }}" class="w-full mb-4 rounded">
+                <img src="{{ product.image.url }}" alt="{{ product.title }}" class="h-48 w-64 object-cover mb-4 rounded">
+
                 <h2 class="text-xl font-semibold mb-2">{{ product.title }}</h2>
                 <p class="text-gray-700 mb-2"><strong>Category:</strong> {{ product.category.title }}</p>
                 <p class="text-gray-700 mb-2"><strong>Vendor:</strong> {{ product.user }}</p>
