--- a/TravelBooking/theme/templates/search_results.html
+++ b/TravelBooking/theme/templates/search_results.html
@@ -39,11 +39,12 @@
         {% if search_results %}
             {% for product in search_results %}
                 <div class="bg-white p-6 rounded-lg shadow-md">
-                    <img src="{{ product.image.url }}" alt="{{ product.title }}" class="w-full mb-4 rounded">
+                    <img src="{{ product.image.url }}" alt="{{ product.title }}" class="h-48 w-64 object-cover mb-4 rounded">
+
                     <h2 class="text-xl font-semibold mb-2">{{ product.title }}</h2>
-                    <p class="text-gray-700 mb-2">Category: {{ product.category.title }}</p>
-                    <p class="text-gray-700 mb-2">Vendor: {{ product.user }}</p>
-                    <p class="text-gray-700 mb-2">Price: ${{ product.price }}</p>
+                    <p class="text-gray-700 mb-2"><strong>Category:</strong> {{ product.category.title }}</p>
+                    <p class="text-gray-700 mb-2"><strong>Vendor:</strong> {{ product.user }}</p>
+                    <p class="text-gray-700 mb-2"><strong>Price: </strong>Rs. {{ product.price }}</p>
                     <a href="{% url 'product_detail' product.pid %}" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">Read More</a>
                 </div>
             {% endfor %}
