--- a/TravelBooking/theme/templates/product_detail.html
+++ b/TravelBooking/theme/templates/product_detail.html
@@ -9,39 +9,38 @@
 {% endblock %}
 
 {% block content %}
-<div class="container mx-auto py-8">
-  <div class="mb-8">
-      <div class="flex justify-center">
-        
-          {% if product.image %}
-              <div class="rounded-lg overflow-hidden shadow-lg">
-                  <img src="{{ product.image.url }}" alt="Image of {{ product.title }}" class="object-cover w-full h-96">
-              </div>
-          {% else %}
-              <p>No images available.</p>
-          {% endif %}
-      </div>
-  </div>
-</div>
+    <div class="container mx-auto py-8">
+        <div class="mb-8">
+            <div class="flex justify-center">
+                {% if product.image %}
+                    <div class="rounded-lg overflow-hidden shadow-lg max-w-screen-md">
+                        <img src="{{ product.image.url }}" alt="Image of {{ product.title }}" class="object-cover w-full">
+                    </div>
+                {% else %}
+                    <p>No images available.</p>
+                {% endif %}
+            </div>
+        </div>
 
-
-        <div class="bg-white p-6 rounded-lg shadow-md grid grid-cols-1 md:grid-cols-2 gap-6">
+        <div class="bg-white p-6 rounded-lg shadow-md grid grid-cols-1 md:grid-cols-2 gap-8">
             <div>
                 <div class="bg-gray-100 p-6 rounded-lg shadow-md">
-                    <h2 class="text-2xl font-semibold mb-4">Product Details</h2>
+                    <h2 class="text-3xl font-semibold mb-4">Product Details</h2>
                     <div class="mb-4">
-                        <p class="text-gray-700"><strong>Description:</strong> {{ product.description }}</p>
+                        <p class="text-gray-700">{{ product.description }}</p>
                     </div>
                     <div class="grid grid-cols-2 gap-4">
                         <div>
-                            <p class="text-gray-700"><strong>Category:</strong> {{ product.category.title }}</p>
+                            <p class="text-gray-700 font-semibold">Category:</p>
+                            <p class="text-gray-600">{{ product.category.title }}</p>
                         </div>
                         <div>
-                            <p class="text-gray-700"><strong>Vendor:</strong> {{ product.user }}</p>
+                            <p class="text-gray-700 font-semibold">Vendor:</p>
+                            <p class="text-gray-600">{{ product.user }}</p>
                         </div>
                     </div>
                     <div class="mt-6">
-                        <p class="text-lg font-semibold">Price: Rs.{{ product.price }}</p>
+                        <p class="text-2xl font-semibold">Price: Rs.{{ product.price }}</p>
                         {% if product.get_percentage > 0 %}
                             <p class="text-sm text-gray-500 line-through">Original Price: Rs.{{ product.old_price }}</p>
                             <p class="text-sm text-green-600">Discount: -{{ product.get_percentage|default:"0"|floatformat:0 }}%</p>
@@ -51,16 +50,16 @@
             </div>
             <div>
                 <div class="bg-gray-100 p-6 rounded-lg shadow-md">
-                    <h2 class="text-2xl font-semibold mb-4">Check Availability</h2>
+                    <h2 class="text-3xl font-semibold mb-4">Check Availability</h2>
                     <form action="{% url 'check_availability' product.pid %}" method="POST" onsubmit="return checkAvailability(this);">
                         {% csrf_token %}
                         <div class="mb-4">
-                            <label for="startDate" class="block text-gray-700 text-sm font-bold mb-2">Check-in Date:</label>
-                            <input type="date" id="startDate" name="startDate" class="rounded-lg p-2 border border-gray-200 bg-white w-full" required onfocus="this.min=new Date().toISOString().split('T')[0]">
+                            <label for="startDate" class="block text-gray-700 font-semibold mb-2">Check-in Date:</label>
+                            <input type="date" id="startDate" name="startDate" class="rounded-lg p-2 border border-gray-300 bg-white w-full" required onfocus="this.min=new Date().toISOString().split('T')[0]">
                         </div>
                         <div class="mb-4 relative">
-                            <label for="num_guests" class="block text-gray-700 text-sm font-bold mb-2">Guests:</label>
-                            <input type="number" id="num_guests" name="num_guests" class="p-2 border-t border-b border-r border-gray-200 bg-white w-full" placeholder="Number of Guests" required min="1">
+                            <label for="num_guests" class="block text-gray-700 font-semibold mb-2">Guests:</label>
+                            <input type="number" id="num_guests" name="num_guests" class="p-2 border border-gray-300 bg-white w-full" placeholder="Number of Guests" required min="1">
                             <span class="absolute top-full left-0 mt-1 text-sm text-gray-600">*10% discount on more than 4 guests</span>
                         </div>
                         {% if not user.is_authenticated %}
@@ -69,7 +68,7 @@
                                 <span class="block sm:inline"> You must be logged in to check availability.</span>
                             </div>
                         {% endif %}
-                        <button type="submit" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 mt-4 rounded">Check Availability</button>
+                        <button type="submit" class="bg-blue-600 hover:bg-blue-700 text-white font-semibold py-3 px-6 mt-4 rounded">Check Availability</button>
                     </form>
                     <div class="mt-2 text-gray-700 text-sm">
                         <p>Enter your check-in date and number of guests to check availability.</p>
